Fix button alignment

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -30,9 +30,10 @@ body {
       text-align: center;
     }
 
-      .button {
-        background: white;
-        border: 1px solid #eee;
-        padding: 8px 24px 8px;
-        display: block;
+button {
+  background: white;
+  border: 1px solid #eee;
+  padding: 8px 24px 8px;
+  display: block;
+  margin: 0 auto;
       }
